"refactor: API 엔드포인트 및 디자인 태그 구조 정리"